0.99.7.4

* Updated Vimeo feed URLs.

0.99.7.3

* lifestream.css has been moved into the theme.
* Twitter can now use HTTP Auth (if you specify a password) to fetch updates.
* If an option field's name ends with password it will show as a password field.
* Changing themes really works now.
* Relabeled all occurrences of "LifeStream" to "Lifestream".
* Timezone offset option has been removed, and is now using the built-in gmt_offset option.
* Added maintenance panel initially with reset default options and cron tasks.
* Fixed an issue with cron timers being scheduled oddly.

0.99.7.2

* Changing the owner of a feed now correctly sets all past and future events to the proper owner.
* Moved digest template in themes/<name>/digest.inc.php.
* PHP4 should no longer cause fatal errors, but fail with an error message.

0.99.7.1

* Updated localization with some missing values.
* Fixed lifestream_twitter_status() and lifestream_facebook_status() functions.
* Updated French localization.
* Updated Spanish localization.

0.99.7

* Created extensions/ directory (see extensions/README for more information).
* Created themes/ directory (see themes/README for more information).
* Added get_icon_name() for custom extensions.
* Paging on the feeds page will now work properly under all cases.
* Updated YouTube submissions to use the YouTube API.

0.99.6.5

* Fixed another issue causing grouping to fail.

0.99.6.4

* Added WordPress Codex extension.

0.99.6.3

* Fix for cron schedules not posting correctly.

0.99.6.2

* Fixed an issue which was causing grouping to fail on certain feeds.
* Fixed an issue which was causing the database alter errors in the admin.

0.99.6

* Implemented a solution for missing extensions.
* Changed how versions are handled in Lifestream.

0.99.5.2

* Added Belorussian translation from Fat Cowest (fatcow.com).
* Cleaned up some code in the refresh() method.
* Plurk feed has been readded.
* Fixed an issue with BrightKite check-ins.